src/test/ui/libstd-case-typo/hash.rs
// checks case typos with libstd::hash structs
fn main(){}

fn test_bhd(_x: BuildhasherDefault){}
//~^ ERROR: cannot find type `BuildhasherDefault` in this scope
